- `#DOM.shuffleElements` accepts a callback.

## 0.18.0
- `#OBJ.mixin|mixout|mixcommon` return the mixed object.
- `#PARSE.isEmail`.
- `#RANDOM.randomEmail`.
- `#Time.now`.

## 0.17.0
- `ARRAY.indexOf`
- Several improvements in the ARRAY module.

## 0.16.1
- `ARRAY.isArray` fallbacks on native code.

## 0.16.0
- `DOM.split()` refactored. Supports custom level of recursion, and arrays keys can be inserted (omitted by default).

## 0.15.0
- `DOM.viewportSize()`.

## 0.14.0
- Removed deprecated wrench methods. Users of FS lib should use 'fs-extra' for their purposes.

## 0.13.1
- `RANDOM.randomString()` can use spaces.

## 0.13.0
- `RANDOM.randomString()`

## 0.12.0
- Removed prepublish script in package.json that might cause errors in some systems on install.

## 0.11.0
- `PARSE.stringifyAll()` checks for type (fix bug with strings).
- `DOM.cookieSupport()` checks for cookie support in browser.
- `DOM.blinkTitle()`
- `DOM.playSound()`
- `DOM.onFocusIn()` and DOM.onFocusOut()` replace onFocusChange.

## 0.10.12
- `PARSE.parse()` refactor.

## 0.10.11
- `TIME.getTimeM()`.

## 0.10.10
- `DOM.disableBackButton()`.

## 0.10.9
- Fixed bug onFocusChange for recent Chrome.

## 0.10.8
- Fixed bug introduced in previous version DOM.highlight().

## 0.10.7
- `FS.copyFile()`.

## 0.10.6
- `DOM.isNode()` and `DOM.isElement()`.

## 0.10.5
- `DOM.shuffleElements()` improved type checking and error message.

## 0.10.4
- `DOM.getElementsByClassName()` fixed bug for elements with multiple classes.

## 0.10.3
- `PARSE.range()` accepts also numbers as expression.

## 0.10.2
- `PARSE.isInt()`, `PARSE.isFloat()`, and `PARSE.isNumber()`.

## 0.10.1
- `FS.resolveModuleDir()` fix for JSUS dir.

## 0.10.0
- `#OBJ.clone()` fixed bug with cloning arrays of objects.
- `#OBJ.classClone()` clones an object preserving its class type.
- `#PARSE.funcName()` retrieves the name of a function.
- `#PARSE.range()` creates integer ranges based on specified criteria.