@@ -330,28 +330,6 @@
         return '?' + str.join('&');
     };
 
-    OBJ.keys = OBJ.objGetAllKeys = function(obj, level, curLevel) {
-        var result, key;
-        if (!obj) return [];
-        level = 'number' === typeof level && level >= 0 ? level : 0;
-        curLevel = 'number' === typeof curLevel && curLevel >= 0 ? curLevel : 0;
-        result = [];
-        for (key in obj) {
-            if (obj.hasOwnProperty(key)) {
-                result.push(key);
-                if (curLevel < level) {
-                    if ('object' === typeof obj[key]) {
-                        result = result.concat(OBJ.objGetAllKeys(obj[key],
-                                                                 level,
-                                                                 (curLevel+1)));
-                    }
-                }
-            }
-        }
-        return result;
-    };
-
-
     /**
      * ## OBJ.keys
      *
