@@ -5,6 +5,8 @@
 - `#JSUS.get` alias of `JSUS.require` removed. `#JSUS.get` is now a method of the DOM library.
 - DOM library rewritten. Several methods removed and code optimized. Methods _added_: get, add|append, addAttributes. Methods _modified_: generateUniqueId, addCSS, addJS. Methods _removed_: getElement, addElement, addAttributes2Elem, getButton, addButton, getFieldset, addFieldset, getTextInput, addTextInput, getTextArea, addTextArea, getCanvas, addCanvas, getSlider, addSlider, getRadioButton, addRadioButton, getLabel, addLabel, getSelect, addSelect, getIFrame, addIFrame, addBreak, getDiv, addDiv. 
 - `#DOM.shuffleElements` accepts a callback.
+- '#OBJ.keys` improved, read inline docs for new options.
+- `#OBJ.objGetAllKeys` removed.
 
 ## 0.18.0
 - `#OBJ.mixin|mixout|mixcommon` return the mixed object.
